    - Added `elements.ic` and `elements.multiplexer` functions as replacements to `blackbox` and `mux`. These include more functionality such as adjusting indiviudal pin rotation, color, and inverter bubbles.
    - Upgraded documentation to Sphinx and moved to readthedocs.org at https://schemdraw.readthedocs.io/en/latest/.

v0.5.0, 21-Jul-2019
    - Added flowcharting symbol methods to SchemDraw.flow module
    - Added signal processing symbols to SchemDraw.dsp module
    - Implemented fill parameter on Drawing.add to fill shapes and closed paths with a solid color
    - New elements: fuse, variable capacitor, tunnel diode, JFET, DIAC, TRIAC, SCR

v0.4.0, 03-Nov-2018
    - Fixed drawing of NOT and related gates to property extend the path
    - Fixed arrow translation when grouping elements
    - Fixed sidelabels and plabels of blackbox when empty
    - Fixed arc drawing due to change in Matplotlib 2.2 on asymmetric partial arcs

v0.3.0, 03-Jul-2017
    - Added function for drawing multiplexers/demultiplexers
    - Updates to labelI() method to allow reversing arrow and changing length
    - New elements: PHOTODIODE, NFET4, PFET4, VSS, VDD
    - Add CSS to documentation

v0.2.2, 06-Mar-2016
    - Added function for drawing transformers
    - Added JJ Josephson Junction element
    - Documentation updates
    
v0.2.1, 03-May-2015
    - Fixed anchor names when element overwrites base anchor, such as BJT_PNP.
    - Added showplot keyword to draw() for non-interactive mode.
    - Added 2-collector BJT.
    - Documentation: added gallery of schematics.
    
v0.2.0, 29-Apr-2015
    - Added elements: 
      BATTERY, BAT_CELL, SPEAKER, BUTTON, BUTTON_NC, XTAL, MEMRISTOR,
      SCHOTTKY, ZENER, LED2
    - Added default line width argument to drawing() class. Default width is now 1.5.
    - Converted documentation to use all vector-based images
    - Added XKCD-mode example

v0.1.4, 30-Sep-2014
    - Added elements: LED, OPAMP_NOSIGN, GAP_LABEL, ELLIPSIS